R--> html en sucio

--- a/index.html
+++ b/index.html
@@ -3,8 +3,49 @@
     <title>"Tranvia Vitoria"</title>
   </head>
   <body>
+
     <header>
+      <img src="img/euskotren_logo.png">
       <h1>Control de tranvia</h1>
     </header>
+    <div id="menu">
+      <h2>Menu</h2>
+      <ul>
+        <li>Estado</li>
+        <li>Acciones</li>
+      </ul>
+    </div>
+
+    <div id="emergencia">
+      <h2>Emergencia</h2>
+      <img src="img/emergencia.png">
+      <p>Ha habido una emergencia y el tranvia se ha parado</p>
+    </div>
+
+    <div id="tranvia">
+      <h2>Posicion del tranvia</h2>
+      <img src="img/tranvia.png">
+      <p>Aqui va la linea por donde se movera el tranvia</p>
+    </div>
+
+    <div id="estado">
+      <h2>Estado del tranvia</h2>
+      <p>Parada1</p>
+      <p>Parada2</p>
+    </div>
+
+    <div id="acciones">
+      <h2>Acciones</h2>
+      <p> <label>Posicion a la que ir: <input type="text" name="posicion"></label> </p>
+      <p> <label>Parada a la que ir: <input type="text" name="parada"></label> </p>
+      <p>Poner en marcha</p>
+      <p>Parar</p>
+      <p>Abrir puertas</p>
+      <p>Cerrar puertas</p>
+    </div>
+    <footer>
+      <h2>Footer</h2>
+      <p>Aqui ira el footer</p>
+    </div>
   </body>
 </html>
